--- a/service.yaml
+++ b/service.yaml
@@ -7,12 +7,12 @@ metadata:
   name: myd
 spec:
   ports:
-  - port: 80
+  - port: {{ .Values.myservice.port }}
     protocol: TCP
     targetPort: 80
   selector:
     app: myd
-  type: NodePort
+  type: {{ .Values.myservice.type }}
 status:
   loadBalancer: {}
-~
+
